log/build_2024-04-01_18-47-53/camera_capture/stderr.log
  File "/home/chris/capstone/hitc_ws/install/camera_capture/lib/python3.10/site-packages/camera_capture/solveMaze.py", line 4
    from camera_capture import RRT.py
                                  ^
SyntaxError: invalid syntax

